Express with mongoDB checkpoint

--- a/block-BNaaft/event-management/views/event.ejs
+++ b/block-BNaaft/event-management/views/event.ejs
@@ -9,7 +9,7 @@
     <div class="flex-60">
       <% events.forEach(event => { %>
       <section class="ent-lst">
-        <h2><%= event.title %></h2>
+        <h2 class="sub-header"><%= event.title %></h2>
         <div class="flex jc-between">
           <p><%= event.summary.substr(0, 100) + "..." %></p>
           <a href="/events/<%= event._id %>">
