--- a/block-BNaaft/event-management/views/index.ejs
+++ b/block-BNaaft/event-management/views/index.ejs
@@ -4,7 +4,7 @@
     <article class="home-content">
       <h2>Welcome to Eventeria</h2>
       <h1>We help you to plan your event</h1>
-      <a href="/about"><button class="schedule-btn">More..</button></a>
+      <a href="/about"><button class="more-btn">More..</button></a>
     </article>
   </section>
   <section class="home-info">
