--- a/block-BNaaft/event-management/views/partials/footer.ejs
+++ b/block-BNaaft/event-management/views/partials/footer.ejs
@@ -1,6 +1,10 @@
-<footer>
-  <div class="copyright container">
-    copyright &copy; 2022 All rights reserved | This template is made with
-    <span class="pink">♡</span> by <span class="pink">Kunal</span>
-  </div>
-</footer>
+<html>
+  <body>
+    <footer>
+      <div class="copyright container">
+        copyright &copy; 2022 All rights reserved | This template is made with
+        <span class="pink">♡</span> by <span class="pink">Kunal</span>
+      </div>
+    </footer>
+  </body>
+</html>
