--- a/block-BNaaft/event-management/public/stylesheets/style.css
+++ b/block-BNaaft/event-management/public/stylesheets/style.css
@@ -130,6 +130,7 @@ table {
   box-sizing: border-box;
 }
 body {
+  background-color: aquamarine;
   font-size: 16px;
   line-height: 1.5;
   font-family: 'Poppins', sans-serif;
@@ -221,15 +222,27 @@ button:hover {
 .btn {
   background-color: slategray;
 }
-
+.event-info {
+  color: #012d5b;
+}
 .like {
-  background-color: navy;
+  background-color: rgb(51, 51, 194);
   color: white;
   border-radius: 0.5rem;
 }
-
 .like:hover {
   background-color: rgb(84, 84, 153);
+}
+
+.update {
+  background-color: green;
+  color: white;
+  border-radius: 0.2rem;
+}
+.delete {
+  background-color: red;
+  color: white;
+  border-radius: 0.2rem;
 }
 
 /* Hero Header */
@@ -274,12 +287,13 @@ button:hover {
 
 h2 {
   font-size: 20px;
-  color: #51587e;
+  color: #664d4e;
   font-weight: 900;
   text-decoration: underline;
 }
 .sub-header {
-  margin: 1.5rem 0;
+  margin: 1rem 0;
+  text-transform: capitalize;
 }
 h1 {
   font-size: 48px;
@@ -301,13 +315,22 @@ h1 {
 }
 .schedule-btn {
   padding: 14px 12px;
-  background-color: #fd656b;
+  background-color: #664d4e;
   border-radius: 4px;
   font-weight: 600;
   border: none;
   font-size: 14px;
   text-transform: uppercase;
   margin-top: 2rem;
+}
+.more-btn {
+  padding: 14px 12px;
+  background-color: #664d4e;
+  border-radius: 4px;
+  font-weight: 600;
+  border: none;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 .schedule-btn a {
   color: white;
@@ -321,7 +344,7 @@ h1 {
 }
 /*about*/
 .abt-col-1-3 {
-  padding: 80px 0;
+  padding: 20px 0;
   width: 100%;
 }
 .abt-cal-1-2 {
