--- a/block-BNaaft/event-management/views/about.ejs
+++ b/block-BNaaft/event-management/views/about.ejs
@@ -1,6 +1,6 @@
 <% include partials/header%>
 <main>
-  <section class="about-section">
+  <section abt-section>
     <div class="abt-col-1-3">
       <div class="abt-cal-1-2">
         <article class="container3 flex-end">
