--- a/block-BNaaft/event-management/views/partials/header.ejs
+++ b/block-BNaaft/event-management/views/partials/header.ejs
@@ -21,10 +21,26 @@
             <li><a href="/about">About Us</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/events">Portfolio</a></li>
-            <li><i class="fa-brands fa-linkedin-in"></i></li>
-            <li><i class="fa-brands fa-facebook-square"></i></li>
-            <li><i class="fa-brands fa-twitter-square"></i></li>
-            <li><i class="fa-brands fa-google-plus-square"></i></li>
+            <li>
+              <a href="https://www.linkedin.com/login"
+                ><i class="fa-brands fa-linkedin-in"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><i class="fa-brands fa-facebook-square"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/"
+                ><i class="fa-brands fa-twitter-square"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.google.com/"
+                ><i class="fa-brands fa-google-plus-square"></i
+              ></a>
+            </li>
           </ul>
         </nav>
       </div>
